# Lyric2Melody-for-Russian-Lyrics

./: README.md  Storage_analysis.ipynb  lyrics_to_melody.py  main.py  main_debugging.ipynb  pyproject.toml  structure_function_debugging.ipynb  Я_пришёл_к_тебе_с_приветом_3.xml
Examples/: Белые_розы.xml  Искала.xml  Я_свободен.xml
multilabel_classification/: color_distr.csv  tone_distr.csv
utils/: chords_generator.py  generating.py  generating_consts.py  lyrics_preprocessing.py  midi_converter.py
