[tool.poetry]
name = "roc-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "roc_model"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
scipy = "^1.9.3"
tqdm = "^4.64.1"
miditoolkit = "^0.1.16"
midiutil = "^1.2.1"
textblob = "^0.17.1"
fairseq = "^0.12.2"
transformers = "^4.25.1"
tex = "^1.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
