[tool.poetry]
name = "roc-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "roc_model"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
scipy = "^1.9.3"
tqdm = "^4.64.1"
miditoolkit = "^0.1.16"
midiutil = "^1.2.1"
textblob = "^0.17.1"
fairseq = "^0.12.2"
transformers = "^4.25.1"
tex = "^1.8"
pytest-playwright = "^0.3.0"
tensorboardx = "^2.5.1"
pandas = "^1.5.2"
openpyxl = "^3.0.10"
transliterate = "^1.10.2"
musescore = "^0.0.1"
pyphen = "^0.13.2"
scikit-learn = "^1.2.0"
spacy = "^3.5.0"
bs4 = "^0.0.1"
ipywidgets = "^8.0.4"
torchtext = "^0.14.1"
pymongo = "^4.3.3"
sqlalchemy = "^2.0.4"
gevent = "^22.10.2"
langdetect = "^1.0.9"
tensorflow = "^2.11.0"
seqio = "^0.0.15"
gin-config = "^0.5.0"
pychord = "^1.2.0"
datasets = "^2.10.1"
seaborn = "^0.12.2"
wordcloud = "^1.8.2.2"
circlify = "^0.15.0"
pybind11 = "^2.10.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
